fix deprecated Integer, Long, Boolean